# context7-mcp

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/context7/: api.py  core.py  exceptions.py  logger.py  schemas.py  settings.py
