[project]
name = "context7-python"
version = "0.1.0"
description = "Python port of context7."
readme = "README.md"
licence = "LICENSE.md"
requires-python = ">=3.11"
authors = [
  { name = "Henning Krause", email = "henning.krause90@gmail.com" }
]
dependencies = [
  "cryptography>=45.0.7",
  "fastapi>=0.115.12,<1",
  "httpx>=0.28.1",
  "uvicorn>=0.35.0",
  "loguru>=0.7.3",
  "fastapi-mcp>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.12.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/context7"]

[tool.hatch.metadata]
allow-direct-references = true